# novasdr-wasm-local

./: .gitignore  BUILD.md  BUILD_INSTRUCTIONS.md  GUI_OPTIONS.md  INSTALL.md  LICENSE  README.md  SETTINGS_INFO.md  SOLUTION_SUMMARY.md  STANDALONE_APP_GUIDE.md  TODO.md  TODO_PACKAGING.md  WINDOWS_BUILD.md  WINDOWS_FIX.md
.github/: GITHUB_ACTIONS_SETUP.md  VERSIONING.md
.github/workflows/: WORKFLOW_GUIDE.md  build-apps.yml
Download app here/LU2MET_NR.app/Contents/Frameworks/: recordings  sounddevice-0.5.5.dist-info
Download/LU2MET_NR.app/Contents/: Info.plist
audio_processor/: Info.plist  NC Filter from web.py  NovaSDR Audio Processor.spec  README.md  USAGE.md  app_icon.icns  audio_processor.py  audio_processor_gui.py  audio_processor_native_gui.py  audio_processor_novasdr_tunable.py  audio_processor_web.py  build_macos.sh  build_windows.bat  check_and_run.sh  convert_icon.py  create_icon.py  create_icons.sh  create_solid_icon.py  fix_icon.py  list_devices.py  make_square_icon.py  novasdr_app.py  novasdr_gui_qt.py  requirements.txt  run.sh  run_aggressive.sh  run_app.sh  run_extreme.sh  run_gui.sh  run_moderate.sh  run_native_gui.sh  run_qt_gui.sh  run_ultra.sh  run_web.sh  simple_test.py  test_app_modules.py  test_setup.sh
novasdr-wasm/: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md  THIRD_PARTY.md
novasdr-wasm/src/: audio.rs  lib.rs  noiseblankerwild.rs  noisereduction.rs  spectralnoisereduction.rs  symphonia_flac.rs  waterfall.rs
novasdr_nr_py/: Cargo.toml
novasdr_nr_py/src/: lib.rs  spectralnoisereduction.rs
(+586 files in other folders)
