[package]
name = "novasdrdsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
futuredsp = "0.0.6"
js-sys = "0.3.69"
ringbuf = "0.3.3"
rubato = "0.15.0"
rustfft = "6.2.0"
symphonia = { version = "0.5.4", default-features = false, features = ["flac"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }
zstd = { version = "0.13.0", default-features = false, features = ["wasm", "thin"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
lto = true
opt-level = "s"

[workspace]
